# django-easy-query-builder

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  pyproject.toml
django_easy_query_builder/: mixins.py  project_types.py  saved_views.py  validators.py
django_easy_query_builder/migrations/: 0001_initial.py  0003_saved_view_usage_metadata.py
django_easy_query_builder/static/django_easy_query_builder/: query_builder.css  query_builder.js
examples/migrations/: 0001_initial.py  0003_country_alter_manufacturer_country.py
project/: .gitignore  LICENSE  MANIFEST.in  README.md  docs.md  pyproject.toml
project/.github/workflows/: publish-pypi.yml
project/admin-query-builder/: README.md  index.html  main.js  package-lock.json  package.json  styles.css
project/admin-query-builder/tests/: query-builder.test.js
project/django_easy_query_builder/: apps.py  builders.py  mixins.py  models.py  parsers.py  project_types.py  saved_views.py  tests.py  validators.py
project/django_easy_query_builder/migrations/: 0002_upgrade_query_hash_to_sha256.py
project/django_easy_query_builder/tests/: relations_test.py  simple_test.py
project/examples/: admin.py  models.py
project/examples/migrations/: 0001_initial.py  0002_car_manufacturer_person_cars_car_manufacturer.py
project/project/: settings.py
project/tests/: __init__.py  test_admin_e2e.py  test_advanced_query_backend.py  test_query_builder.py  test_saved_views.py  test_views.py
tests/: test_admin_e2e.py  test_advanced_query_backend.py  test_saved_views.py  test_views.py
(+4 files in other folders)
