[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-easy-query-builder"
version = "0.1.2"
description = "Advanced query builder UI for Django admin changelists."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
  "Django>=4.2",
  "psycopg2-binary (>=2.9.11,<3.0.0)",
]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Framework :: Django",
  "Framework :: Django :: 4.2",
  "Framework :: Django :: 5.0",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/diyan/django-easy-query-builder"
Repository = "https://github.com/diyan/django-easy-query-builder"
Issues = "https://github.com/diyan/django-easy-query-builder/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["django_easy_query_builder*"]

[tool.setuptools.package-data]
django_easy_query_builder = [
  "templates/**/*.html",
  "static/**/*",
]

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 120
select = ["E501", "F401", "E722", "ANN001", "ANN002", "ANN003", "ANN102", "ANN201", "ANN202", "ANN204", "ANN205", "ANN206", "ANN401"]

[tool.ruff.per-file-ignores]
"tests/*" = ["ANN"]
